--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,19 +8,31 @@ spring:
   application:
     name: workflow-engine-bpmn
   datasource:
-    url: jdbc:postgresql://localhost:5432/uit-bpmn-activiti
-    username: postgres
-    password: Password123
-    driver-class-name: org.postgresql.Driver
-
+    process-engine:
+      url: jdbc:postgresql://localhost:5432/uit-bpmn-activiti
+      username: postgres
+      password: Password123
+      driver-class-name: org.postgresql.Driver
+    dpl-platform:
+      url: jdbc:postgresql://localhost:5432/uit-dpl-platform
+      username: postgres
+      password: Password123
+      driver-class-name: org.postgresql.Driver
   jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
+    process-engine:
       hibernate:
-        format_sql: true
-
+        ddl-auto: update
+      show-sql: true
+      properties:
+        hibernate:
+          format_sql: true
+    dpl-platform:
+      hibernate:
+        ddl-auto: update
+      show-sql: true
+      properties:
+        hibernate:
+          format_sql: true
 flyway:
   enabled: true
   locations: classpath:db/migration
